--- a/package.json
+++ b/package.json
@@ -1,27 +1,29 @@
 {
-  "name": "unit-9-project-9-test",
+  "name": "techdegree-fullstackjs-rest-api",
   "version": "1.0.0",
-  "description": "Rest API test",
+  "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "node app.js"
+    "start": "node app.js",
+    "seed": "cross-env DB_ENABLE_LOGGING=true node './seed'"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/justicetrent/unit-9-project-9-test.git"
-  },
-  "author": "Justice",
+  "keywords": [],
+  "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/justicetrent/unit-9-project-9-test/issues"
+  "devDependencies": {
+    "nodemon": "^1.18.3"
   },
-  "homepage": "https://github.com/justicetrent/unit-9-project-9-test#readme",
   "dependencies": {
-    "express": "^4.17.1",
+    "basic-auth": "^2.0.1",
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.0",
+    "cross-env": "^5.2.0",
+    "express": "^4.16.3",
     "express-validator": "^6.2.0",
-    "seed": "^0.4.4",
+    "morgan": "^1.9.0",
+    "promise.prototype.finally": "^3.1.0",
     "sequelize": "^5.18.1",
     "sequelize-cli": "^5.5.1",
-    "sqlite3": "^4.1.0"
+    "sqlite3": "^4.0.2"
   }
 }
